--- a/front/templates/partials/nav.html
+++ b/front/templates/partials/nav.html
@@ -1,24 +1,20 @@
 <!-- Navigation -->{% load i18n %}
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="margin-bottom: 0">
-    <div class="navbar-inner">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="{% url 'home' %}">{% trans "Maagar.IM" %}</a>
-            </div>
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{% url 'home' %}">{% trans "Maagar.IM" %}</a>
+        </div>
 
-            <div id="navbar" class="navbar-collapse collapse" role="navigation">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="{% url 'repository:index' %}">{% trans "Repositories" %}</a>
-                    </li>
-                </ul>
-            </div>
+        <div id="main-navbar" class="navbar-collapse collapse" role="navigation">
+            <ul class="nav navbar-nav">
+                <li><a href="{% url 'repository:index' %}">{% trans "Repositories" %}</a></li>
+            </ul>
         </div>
     </div>
 </nav>
