--- a/repository/templates/repository/index.html
+++ b/repository/templates/repository/index.html
@@ -1,58 +1,51 @@
 {% extends 'site_base.html' %}{% load i18n %}
 
 {% block breadcrumb %}
-<li class="active">{% trans "Repositories" %}</li>
+    <li class="active">{% trans "Repositories" %}</li>
 {% endblock %}
 
 {% block container %}
-    <div class="col-md-12">
-        <div class="panel panel-info">
-            <div class="panel-heading">
-                <div class="panel-title">{% trans "Repositories" %}</div>
-            </div>
-            <div class="panel-body">
-                <table class="table table-striped table-responsive table-hover">
-                    <thead>
-                    <tr>
-                        <th>{% trans "Name" %}</th>
-                        <th>{% trans "Owner" %}</th>
-                        <th>{% trans "Status" %}</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for repository in repositories %}
-                        <tr>
-                            <td><a href="{% url 'repository:view' repository.id %}">{{ repository.name }}</a></td>
-                            <td>{{ repository.owner }}</td>
-                            <td>{{ repository.status }}</td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-                <nav>
-                    <ul class="pager">
-                        {% if repositories.has_previous %}
-                            <li class="previous">
-                                <a href="?page={{ repositories.previous_page_number }}">
-                                    <span aria-hidden="true">&rarr;</span> {% trans "Previous" %}
-                                </a>
-                            </li>
-                        {% endif %}
+    <div>
+        <table class="table table-striped table-responsive table-hover">
+            <thead>
+            <tr>
+                <th>{% trans "Name" %}</th>
+                <th>{% trans "Owner" %}</th>
+                <th>{% trans "Status" %}</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for repository in repositories %}
+                <tr>
+                    <td><a href="{% url 'repository:view' repository.id %}">{{ repository.name }}</a></td>
+                    <td>{{ repository.owner }}</td>
+                    <td>{{ repository.status }}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+        <nav>
+            <ul class="pager">
+                {% if repositories.has_previous %}
+                    <li class="previous">
+                        <a href="?page={{ repositories.previous_page_number }}">
+                            <span aria-hidden="true">&rarr;</span> {% trans "Previous" %}
+                        </a>
+                    </li>
+                {% endif %}
 
-                        <li class="current">
-                            {% trans "Page" %} {{ repositories.number }} {% trans "of" %} {{ repositories.paginator.num_pages }}
-                        </li>
+                <li class="current">
+                    {% trans "Page" %} {{ repositories.number }} {% trans "of" %} {{ repositories.paginator.num_pages }}
+                </li>
 
-                        {% if repositories.has_next %}
-                            <li class="next">
-                                <a href="?page={{ repositories.next_page_number }}">
-                                    {% trans "Next" %} <span aria-hidden="true">&larr;</span>
-                                </a>
-                            </li>
-                        {% endif %}
-                    </ul>
-                </nav>
-            </div>
-        </div>
+                {% if repositories.has_next %}
+                    <li class="next">
+                        <a href="?page={{ repositories.next_page_number }}">
+                            {% trans "Next" %} <span aria-hidden="true">&larr;</span>
+                        </a>
+                    </li>
+                {% endif %}
+            </ul>
+        </nav>
     </div>
 {% endblock %}
