--- a/repository/templates/repository/view.html
+++ b/repository/templates/repository/view.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block container %}
-    <div>
+    <div class="row">
         <div class="col-md-9">
             <div class="panel panel-primary">
                 <div class="panel-heading">
