--- a/front/templates/partials/nav.html
+++ b/front/templates/partials/nav.html
@@ -15,6 +15,13 @@
             <ul class="nav navbar-nav">
                 <li><a href="{% url 'repository:index' %}">{% trans "Repositories" %}</a></li>
             </ul>
+            <form class="navbar-form navbar-left" role="search" action="{% url 'search' %}" method="post">
+                {% csrf_token %}
+                <div class="form-group">
+                    <input type="text" name="q" class="form-control" placeholder="{% trans "Repo name or Owner" %}" value="{{ request.POST.q }}">
+                </div>
+                <button type="submit" class="btn btn-default">{% trans "Search" %}</button>
+            </form>
         </div>
     </div>
 </nav>
