--- a/front/templates/front/search.html
+++ b/front/templates/front/search.html
@@ -14,7 +14,13 @@
             {% for repository in repositories %}
                 <tr>
                     <td><a href="{% url 'repository:view' repository.id %}">{{ repository.name }}</a></td>
-                    <td>{{ repository.owner }}</td>
+                    <td>
+                        {% if repository.owner_id %}
+                            <a href="{% url 'repository:owner:view' repository.owner_id %}">{{ repository.owner }}</a>
+                        {% else %}
+                            {{ repository.owner_name }}
+                        {% endif %}
+                    </td>
                     <td>{{ repository.status }}</td>
                 </tr>
             {% endfor %}
