--- a/front/templates/partials/nav.html
+++ b/front/templates/partials/nav.html
@@ -12,16 +12,41 @@
         </div>
 
         <div id="main-navbar" class="navbar-collapse collapse" role="navigation">
-            <ul class="nav navbar-nav">
+            {# Main navigation #}
+            <ul class="nav navbar-nav navbar-right">
                 <li><a href="{% url 'repository:index' %}">{% trans "Repositories" %}</a></li>
+                <li><a href="{% url 'repository:owner:index' %}">{% trans "Owners" %}</a></li>
             </ul>
-            <form class="navbar-form navbar-left" role="search" action="{% url 'search' %}" method="post">
+
+            {# Search form #}
+            <form class="navbar-form navbar-right" role="search" action="{% url 'search' %}" method="post">
                 {% csrf_token %}
                 <div class="form-group">
-                    <input type="text" name="q" class="form-control" placeholder="{% trans "Repo name or Owner" %}" value="{{ request.POST.q }}">
+                    <input type="text" name="q" class="form-control" placeholder="{% trans "Repo name or Owner" %}"
+                           value="{% if request.POST.q %}{{ request.POST.q }}{% else %}{{ request.GET.q }}{% endif %}">
                 </div>
                 <button type="submit" class="btn btn-default">{% trans "Search" %}</button>
             </form>
+
+            {# User navigation #}
+            {% if request.user.id %}
+                <ul class="nav navbar-nav navbar-left">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">
+                            {{ request.user }} <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li class="dropdown-header">{% trans "Account" %}</li>
+                            <li><a href="#">{% trans "Profile" %}</a></li>
+                            {% if request.user.is_superuser %}
+                                <li role="separator" class="divider"></li>
+                                <li class="dropdown-header">{% trans "Admin" %}</li>
+                                <li><a href="/admin/" target="_blank">{% trans "Dashboard" %}</a></li>
+                            {% endif %}
+                        </ul>
+                    </li>
+                </ul>
+            {% endif %}
         </div>
     </div>
 </nav>
